# autodata

./: .gitignore  README.md  architecture.html  compare_grpo_runs.py  config.example.json  coverage-report.txt  evaluate_grpo.py  export_grpo_data.py  fetch_docs.py  flowchart.html  main.py  prepare_sources.py  probe_generation.py  probe_provider.py  pyproject.toml  requirements-train.txt  requirements.txt  run-config.oauthlib-python-pilot.json  run5.py  select_sources.py  sources.jsonl  sources.oauthlib-pilot.jsonl  sources.oauthlib-python-pilot.jsonl  sources.oauthlib.jsonl  tasks.oauthlib-python.json  test_autodata.py  train_grpo.py  trajectory.md
.autodata/: coverage.json
autodata/: __init__.py  accepted.py  agents.py  cli.py  config.py  context.py  coverage.py  discovery.py  environment.py  evaluation.py  export.py  io.py  json_output.py  llm.py  loop.py  meta.py  models.py  pipeline.py  prompts.py  providers.py  quality.py  rubrics.py  tasks.py  training.py  trajectory.py  trajectory_report.py  utility.py
autodata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
data/: steel_llms.txt  steel_llms_full.txt
deploy/: modal_grpo_train.py  modal_vllm_weak.py
docs/: accepted-data.md  coverage-graph.md
outputs/: oauthlib-python-candidates.jsonl  oauthlib-python-checkpoint.json  oauthlib-python-debug.audit.jsonl  oauthlib-python-report.json
tests/: test_capability_contract.py  test_coding_contract.py  test_context.py  test_dynamic.py  test_generic_contract.py  test_judge_json.py  test_meta.py  test_pipeline.py  test_prepare_sources.py  test_probe_generation.py  (+11 more)
