[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autodata"
version = "0.1.0"
description = "Agentic, dataset-level synthetic-data construction"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
autodata = "autodata.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["autodata*"]
